created android splash screen

--- a/android/app/src/main/res/layout/launch_screen.xml
+++ b/android/app/src/main/res/layout/launch_screen.xml
@@ -2,25 +2,56 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <ImageView
-        android:src="@mipmap/splash_logo"
-        android:layout_width="240dp"
-        android:layout_height="150dp"
-        android:layout_centerInParent="true"
-    />
-</RelativeLayout>
-
-
-<!-- <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@mipmap/gradient_bg">
+    android:background="@color/white">
+
     <ImageView
         android:src="@mipmap/splash_logo"
-        android:layout_width="240dp"
-        android:layout_height="150dp"
-        android:layout_centerInParent="true"
-    />
-</RelativeLayout> -->
+        android:layout_width="152dp"
+        android:layout_height="111dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="224dp"
+        />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="42dp"
+        android:paddingLeft="8dp"
+        android:paddingRight="8dp"
+        android:gravity="center"
+        android:orientation="horizontal">
+        <ImageView
+            android:src="@mipmap/splash_eu"
+            android:layout_width="77dp"
+            android:layout_height="77dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_weight="1"
+            />
+        <ImageView
+            android:src="@mipmap/splash_so"
+            android:layout_width="77dp"
+            android:layout_height="77dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_weight="1"
+            />
+        <ImageView
+            android:src="@mipmap/splash_usaid"
+            android:layout_width="77dp"
+            android:layout_height="77dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_weight="1"
+            />
+        <ImageView
+            android:src="@mipmap/splash_serendipity"
+            android:layout_width="77dp"
+            android:layout_height="77dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_weight="1"
+            />
+    </LinearLayout>
+</RelativeLayout>
